--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -3,127 +3,84 @@
     <div class="col-md-12 col-sm-12 col-lg-12">
         {{#question}}
         <div class="panel panel-default">
-          <header class="qna-header">
-              <h2 class="qna-title">{{title}}</h2>
-          </header>
-          <div class="content-main">
-              <article class="article">
-                  <div class="article-header">
-                      <div class="article-header-thumb">
-                          <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
-                      </div>
-                      <div class="article-header-text">
-                          {{#writer}}
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{name}}</a>
-                          {{/writer}}
-                          <a href="/questions/413" class="article-header-time" title="퍼머링크">
-                              {{formattedDate}}
-                              <i class="icon-link"></i>
-                          </a>
-                      </div>
-                  </div>
-                  <div class="article-doc">
-                      <p>
-                        {{contents}}
-                      </p>
-                  </div>
-                  <div class="article-util">
-                      <ul class="article-util-list">
-                          <li>
-                              <a class="link-modify-article" href="/questions/{{id}}/update">수정</a>
-                          </li>
-                          <li>
-                              <form class="form-delete" action="/questions/{{id}}" method="POST">
-                                  <input type="hidden" name="_method" value="DELETE">
-                                  <button class="link-delete-article" type="submit">삭제</button>
-                              </form>
-                          </li>
-                          <li>
-                              <a class="link-modify-article" href="/index.html">목록</a>
-                          </li>
-                      </ul>
-                  </div>
-              </article>
+            <header class="qna-header">
+                <h2 class="qna-title">{{title}}</h2>
+            </header>
+            <div class="content-main">
+                <article class="article">
+                    <div class="article-header">
+                        <div class="article-header-thumb">
+                            <img src="https://graph.facebook.com/v2.3/100000059371774/picture"
+                                 class="article-author-thumb" alt="">
+                        </div>
+                        <div class="article-header-text">
+                            {{#writer}}
+                            <a href="/users/92/kimmunsu" class="article-author-name">{{name}}</a>
+                            {{/writer}}
+                            <a href="/questions/413" class="article-header-time" title="퍼머링크">
+                                {{formattedDate}}
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="article-doc">
+                        <p>
+                            {{content}}
+                        </p>
+                    </div>
+                    <div class="article-util">
+                        <ul class="article-util-list">
+                            <li>
+                                <a class="link-modify-article" href="/questions/{{id}}/update">수정</a>
+                            </li>
+                            <li>
+                                <form class="form-delete" action="/questions/{{id}}" method="POST">
+                                    <input type="hidden" name="_method" value="DELETE">
+                                    <button class="link-delete-article" type="submit">삭제</button>
+                                </form>
+                            </li>
+                            <li>
+                                <a class="link-modify-article" href="/index.html">목록</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
 
-              <div class="qna-comment">
-                  <div class="qna-comment-slipp">
-                      <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
-                      <div class="qna-comment-slipp-articles">
-                          {{#answers}}
-                          <article class="article" id="answer-1405">
-                              <div class="article-header">
-                                  <div class="article-header-thumb">
-                                      <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-                                  </div>
-                                  <div class="article-header-text">
-                                      <a href="/users/{{writer.id}}" class="article-author-name">{{writer.name}}</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                          {{formattedDate}}
-                                      </a>
-                                  </div>
-                              </div>
-                              <div class="article-doc comment-doc">
-                                  <p>{{content}}</p>
-                              </div>
-                              <div class="article-util">
-                                  <ul class="article-util-list">
-                                      <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                      </li>
-                                      <li>
-                                          <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}" method="POST">
-                                              <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
-                                          </form>
-                                      </li>
-                                  </ul>
-                              </div>
-                          </article>
-                          {{/answers}}
-                          <form name="answer" method="post" action="/questions/{{question.id}}/answers">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" placeholder="Update your status" name="content"></textarea>
-                              </div>
-                              <button class="btn btn-success pull-right" type="submit">답변하기</button>
-                              <div class="clearfix" />
-                          </form>
-                      </div>
-                  </div>
-              </div>
-          </div>
+                {{> qna/comments}}
+            </div>
         </div>
         {{/question}}
     </div>
 </div>
 
 <!--<script type="text/template" id="answerTemplate">-->
-	<!--<article class="article">-->
-		<!--<div class="article-header">-->
-			<!--<div class="article-header-thumb">-->
-				<!--<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">-->
-			<!--</div>-->
-			<!--<div class="article-header-text">-->
-				<!--<a href="#" class="article-author-name">{0}</a>-->
-				<!--<div class="article-header-time">{1}</div>-->
-			<!--</div>-->
-		<!--</div>-->
-		<!--<div class="article-doc comment-doc">-->
-			<!--{2}-->
-		<!--</div>-->
-		<!--<div class="article-util">-->
-		<!--<ul class="article-util-list">-->
-			<!--<li>-->
-				<!--<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>-->
-			<!--</li>-->
-			<!--<li>-->
-				<!--<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">-->
-					<!--<input type="hidden" name="_method" value="DELETE">-->
-                     <!--<button type="submit" class="delete-answer-button">삭제</button>-->
-				<!--</form>-->
-			<!--</li>-->
-		<!--</ul>-->
-		<!--</div>-->
-	<!--</article>-->
+<!--<article class="article">-->
+<!--<div class="article-header">-->
+<!--<div class="article-header-thumb">-->
+<!--<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">-->
+<!--</div>-->
+<!--<div class="article-header-text">-->
+<!--<a href="#" class="article-author-name">{0}</a>-->
+<!--<div class="article-header-time">{1}</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="article-doc comment-doc">-->
+<!--{2}-->
+<!--</div>-->
+<!--<div class="article-util">-->
+<!--<ul class="article-util-list">-->
+<!--<li>-->
+<!--<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">-->
+<!--<input type="hidden" name="_method" value="DELETE">-->
+<!--<button type="submit" class="delete-answer-button">삭제</button>-->
+<!--</form>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</article>-->
 <!--</script>-->
 {{/partial}}
 
